# Android-FFMpeg

./: .gitignore  build.gradle  ffmpeg_build_for_android.sh  ffmpeg_configure_help.txt  gradle.properties  settings.gradle
demo/: build.gradle
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/com/liux/android/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/androidTest/java/com/liux/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: android_log.h  com_liux_ffmpeg_FFMpeg.cpp  com_liux_ffmpeg_FFMpeg.h  com_liux_ffmpeg_JNIThread.cpp  com_liux_ffmpeg_NativeCallJava.cpp
ffmpeg/src/main/cpp/base/: FFMpeg.cpp  JNIThread.cpp  NativeCallJava.cpp
ffmpeg/src/main/cpp/media/: MediaPlayer.cpp
ffmpeg/src/main/java/com/liux/ffmpeg/: FFMpeg.java  JNIThread.java  NativeCallJava.java
ffmpeg/src/main/java/com/liux/ffmpeg/avcodec/: AVCodec.java
ffmpeg/src/main/java/com/liux/ffmpeg/avdevice/: AVDevice.java
ffmpeg/src/main/java/com/liux/ffmpeg/avfilter/: AVFilter.java
ffmpeg/src/main/java/com/liux/ffmpeg/avformat/: AVFormat.java
ffmpeg/src/main/java/com/liux/ffmpeg/avutil/: AVUtil.java
ffmpeg/src/main/java/com/liux/ffmpeg/base/: FFMpeg.java  JNIThread.java  NativeCallJava.java
ffmpeg/src/main/java/com/liux/ffmpeg/media/: MediaPlayer.java
ffmpeg/src/main/java/com/liux/ffmpeg/swresample/: SwreSample.java
ffmpeg/src/main/java/com/liux/ffmpegdemo/: MainActivity.java
ffmpeg/src/main/res/layout/: activity_main.xml
ffmpeg/src/test/java/com/liux/ffmpeg/: ExampleUnitTest.java
(+14 files in other folders)
